manifests/mattermost/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"mattermost","namespace":"mattermost"},"spec":{"ports":[{"port":8065,"targetPort":8065}],"selector":{"app":"mattermost"}}}
    name: mattermost
    namespace: mattermost
  spec:
    clusterIP: 10.111.245.4
    clusterIPs:
    - 10.111.245.4
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8065
      protocol: TCP
      targetPort: 8065
    selector:
      app: mattermost
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
